RESOLVED FIXED 256281
[LFC][initial-letter] LineBuilder should not mutate BoxGeometry for initial-letter float box
https://bugs.webkit.org/show_bug.cgi?id=256281
Summary [LFC][initial-letter] LineBuilder should not mutate BoxGeometry for initial-l...
zalan
Reported 2023-05-03 16:29:21 PDT
ssia
Attachments
Patch (6.08 KB, patch)
2023-05-03 16:37 PDT, zalan
no flags
Patch (6.05 KB, patch)
2023-05-04 19:32 PDT, zalan
no flags
[fast-cq]Patch (6.05 KB, patch)
2023-05-05 14:19 PDT, zalan
no flags
zalan
Comment 1 2023-05-03 16:37:43 PDT
zalan
Comment 2 2023-05-04 19:32:02 PDT
zalan
Comment 3 2023-05-05 14:19:45 PDT
Created attachment 466233 [details] [fast-cq]Patch
EWS
Comment 4 2023-05-05 19:07:03 PDT
Committed 263743@main (8cdc48869bfd): <https://commits.webkit.org/263743@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 466233 [details].
Radar WebKit Bug Importer
Comment 5 2023-05-05 19:08:17 PDT
Note You need to log in before you can comment on or make changes to this bug.