[LFC][initial-letter] LineBuilder should not mutate BoxGeometry for initial-letter float box https://bugs.webkit.org/show_bug.cgi?id=256281

Reviewed by Antti Koivisto.

Let's just use the normal float box process where box geometry is not mutated until after line layout.

* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::adjustLineRectForInitialLetterIfApplicable):
(WebCore::Layout::LineBuilder::tryPlacingFloatBox):
(WebCore::Layout::LineBuilder::adjustGeometryForInitialLetterIfNeeded): Deleted.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.h:

Canonical link: https://commits.webkit.org/263743@main